--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+bidict==0.22.1
 blinker==1.6.2
+bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
+dnspython==2.4.1
+email-validator==2.0.0.post2
+eventlet==0.33.3
+Faker==19.2.0
 Flask==2.3.2
+Flask-Bcrypt==1.0.1
+Flask-DebugToolbar==0.13.1
+Flask-SocketIO==5.3.5
+Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
 idna==3.4
@@ -10,7 +22,12 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 psycopg2-binary==2.9.6
+python-dateutil==2.8.2
+python-engineio==4.5.1
+python-socketio==5.8.0
 requests==2.31.0
+six==1.16.0
+soupsieve==2.4.1
 SQLAlchemy==2.0.19
 typing_extensions==4.7.1
 urllib3==2.0.4
