--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-SocketIO==5.3.5
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
 greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
