--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
 bcrypt==4.0.1
 beautifulsoup4==4.12.2
 bidict==0.22.1
@@ -16,12 +20,15 @@ Flask-DebugToolbar==0.13.1
 Flask-SocketIO==5.3.5
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
+frozenlist==1.4.0
 greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+multidict==6.0.4
+openai==0.28.1
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
 python-engineio==4.5.1
@@ -30,7 +37,9 @@ requests==2.31.0
 six==1.16.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.19
+tqdm==4.66.1
 typing_extensions==4.7.1
 urllib3==2.0.4
 Werkzeug==2.2.3
 WTForms==3.0.1
+yarl==1.9.2
