--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ eventlet==0.33.3
 Faker==18.13.0
 Flask==2.2.5
 Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
 Flask-DebugToolbar==0.13.1
 Flask-SocketIO==5.3.5
 Flask-SQLAlchemy==3.0.5
